# heal-agent

./: .env  .gitignore  README.md  config.yml  pyproject.toml
src/selfheal/: __init__.py
src/selfheal/agent/: __init__.py  agent.py  classifier.py  diagnostics.py  installers.py  llm_selector.py  ticket_updater.py
src/selfheal/dashboard/: __init__.py  app.py  test.py
src/selfheal/utils/: __init__.py  servicenow_client.py  shell.py
tests/: test_classifier.py
